crates/tui/tests/snapshots/snapshot_tutorial_tests__snapshot_tutorial_complete.snap
---
source: crates/tui/tests/snapshot_tutorial_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search | [?] Unknown                                             │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────────────────────────┐
│                                                                              │
└───────────────┌Tutorial - You're All Set! (100%)─────────────┐───────────────┘
┌Status─────────│              You're All Set! 🎉               ↑───────────────┐
│Press Enter to │                                              █               │
└───────────────│ Congratulations! You've completed the Splunk █───────────────┘
┌Results────────│                 TUI tutorial.                ║───────────────┐
│               │                                              ║.              │
│               │             You now know how to:             ║               │
│               │     ✓ Create and manage connection profiles  ║               │
│               │    ✓ Test connections to your Splunk server  ║─────────────┐ │
│               │         ✓ Run searches and view results      ║0/5] 0%      │ │
│               │       ✓ Navigate using keyboard shortcuts    ↓file         │ │
│               └──────────────────────────────────────────────┘ction        │ │
│                                                 │ ○ Run Search             │ │
│                                                 └──────────────────────────┘ │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Esc:Close| Enter:Run Ctrl+e:Export PgDn:PgDn PgUp:PgUp| ?:Help | q:Quit       │
└──────────────────────────────────────────────────────────────────────────────┘
