crates/tui/tests/snapshots/snapshot_tutorial_tests__snapshot_tutorial_export_demo.snap
---
source: crates/tui/tests/snapshot_tutorial_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search | [?] Unknown                                             │
│ |                                                                            │
└──────────┌Tutorial - Export Your Results (83%)────────────────────┐──────────┘
┌Search Que│               Step 5: Export Your Results              ↑──────────┐
│          │                                                        █          │
└──────────│    Splunk TUI allows you to export search results to   █──────────┘
┌Status────│         various formats for use in other tools.        █──────────┐
│Press Ente│                                                        █          │
└──────────│                Supported export formats:               █──────────┘
┌Results───│     • CSV  - Comma-separated values (great for Excel)  █──────────┐
│          │     • JSON - Structured JSON format (great for APIs)   ║          │
│          │             • Raw  - Raw events as plain text          ║          │
│          │                                                        ║          │
│          │                   To export results:                   ║          │
│          │           1. Run a search and wait for results         ║          │
│          │          2. Press 'e' to open the export dialog        ║          │
│          │              3. Select your preferred format           ║          │
│          │            4. Choose the output file location          ║          │
│          │                   5. Confirm to export                 ↓          │
└──────────└────────────────────────────────────────────────────────┘──────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Esc:Close | Enter:Run Ctrl+e:Export PgDn:PgDn PgUp:PgUp| ?:Help | q:Quit      │
└──────────────────────────────────────────────────────────────────────────────┘
