crates/tui/tests/snapshots/snapshot_tutorial_tests__snapshot_tutorial_keybinding_tutorial.snap
---
source: crates/tui/tests/snapshot_tutorial_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search [NAV] | [?] Unknown                                       │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────────────────────────┐
│                                                                              │
└───────────────┌Tutorial - Learn the Keybindings (66%)────────┐───────────────┘
┌Status─────────│         Step 4: Learn the Keybindings        ↑───────────────┐
│Press Enter to │                                              █               │
└───────────────│ Splunk TUI is designed to be keyboard-driven █───────────────┘
┌Results────────│    for efficiency. Here are the essential    ║───────────────┐
│               │                  shortcuts:                  ║.              │
│               │                                              ║               │
│               │                  Navigation:                 ║               │
│               │    • Tab / Shift+Tab  Switch between screens ║─────────────┐ │
│               │    • Ctrl+Tab / Ctrl+Shift+Tab  Cycle focus  ║0/5] 0%      │ │
│               │               between elements               ↓file         │ │
│               └──────────────────────────────────────────────┘ction        │ │
│                                                 │ ○ Run Search             │ │
│                                                 └──────────────────────────┘ │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│[NAV] Esc:Close| Enter:Run Ctrl+e:Export PgDn:PgDn PgUp:PgUp| ?:Help | q:Quit │
└──────────────────────────────────────────────────────────────────────────────┘
